--- a/typescript/admin/package.json
+++ b/typescript/admin/package.json
@@ -7,20 +7,27 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.13.1",
+    "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-router": "^1.114.17",
     "graphql": "^16.10.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@graphql-codegen/cli": "^5.0.5",
-    "@graphql-codegen/client-preset": "^4.6.4",
+    "@graphql-codegen/client-preset": "^4.7.0",
     "@graphql-codegen/typescript": "^4.1.5",
     "@graphql-codegen/typescript-operations": "^4.5.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@tanstack/react-router-devtools": "^1.114.21",
+    "@tanstack/router-plugin": "^1.114.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
