--- a/typescript/admin/package.json
+++ b/typescript/admin/package.json
@@ -12,17 +12,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.1",
+    "@inertiajs/react": "^2.0.5",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-router": "^1.114.17",
     "graphql": "^16.10.0",
     "justd-icons": "^1.10.25",
+    "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-aria-components": "^1.7.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "tailwindcss": "^4.0.14",
     "tailwindcss-react-aria-components": "^2.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.21.0",
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/client-preset": "^4.7.0",
